# ferrite

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  clippy.toml  flake.nix  rustfmt.toml
ferrite-demo/: Cargo.toml
ferrite-session/: Cargo.nix  Cargo.toml
ferrite-session/src/: lib.rs  macros.rs  public.rs  traits.rs
ferrite-session/src/base/: channel.rs  context.rs  fix.rs  lens.rs  mod.rs  protocol.rs  public.rs  rec.rs  session.rs  shared.rs
ferrite-session/src/context/: chain.rs  mod.rs  public.rs  session.rs
ferrite-session/src/functional/: base.rs  identity.rs  macros.rs  mod.rs  nat.rs  public.rs
ferrite-session/src/functional/row/: impls.rs  structs.rs  traits.rs  utils.rs
ferrite-session/src/functional/type_app/: impls.rs  structs.rs  utils.rs
ferrite-session/src/internal/: mod.rs  public.rs
ferrite-session/src/internal/base/: channel.rs  context.rs  mod.rs  protocol.rs  public.rs  rec.rs  session.rs  shared.rs
ferrite-session/src/internal/base/channel/: functions.rs  impls.rs  mod.rs  traits.rs  types.rs
ferrite-session/src/internal/base/context/: impls.rs  mod.rs  traits.rs
ferrite-session/src/internal/base/protocol/: impls.rs  mod.rs  traits.rs  types.rs
ferrite-session/src/internal/base/rec/: functions.rs  impls.rs  traits.rs  types.rs
ferrite-session/src/internal/base/session/: functions.rs  mod.rs  types.rs
ferrite-session/src/internal/base/shared/: functions.rs  mod.rs  serialize.rs  types.rs
ferrite-session/src/internal/functional/: base.rs  identity.rs  macros.rs  mod.rs  nat.rs  public.rs
ferrite-session/src/internal/functional/row/: impls.rs  structs.rs  traits.rs  utils.rs
ferrite-session/src/internal/functional/type_app/: impls.rs  structs.rs  traits.rs  utils.rs
ferrite-session/src/internal/protocol/: either.rs  end.rs  external_choice.rs  internal_choice.rs  linear_to_shared.rs  lock.rs  mod.rs  public.rs  shared_to_linear.rs  wrap.rs
ferrite-session/src/internal/protocol/channel/: receive.rs  send.rs
ferrite-session/src/internal/protocol/choice/: either.rs  external_choice.rs  extract.rs  internal_choice.rs  mod.rs
ferrite-session/src/internal/protocol/value/: mod.rs  (+2 more)
ferrite-session/src/internal/session/: apply.rs  context.rs  cut.rs  end.rs  fix.rs  forward.rs  include.rs  mod.rs  public.rs  run.rs  shared.rs  step.rs  wrap.rs
ferrite-session/src/protocol/: end.rs  fix.rs  linear_to_shared.rs  lock.rs  mod.rs  public.rs  shared_to_linear.rs  wrap.rs
ferrite-session/src/protocol/channel/: mod.rs  receive.rs  send.rs
ferrite-session/src/protocol/choice/: either.rs  external_choice.rs  internal_choice.rs  mod.rs  utils.rs
ferrite-session/src/protocol/value/: receive.rs  send.rs
ferrite-session/src/session/: apply.rs  context.rs  cut.rs  end.rs  fix.rs  forward.rs  include.rs  mod.rs  persistent.rs  public.rs  run.rs  shared.rs  step.rs  wrap.rs
ferrite-session/src/session/channel/: mod.rs  receive.rs  send.rs
ferrite-session/src/session/choice/: mod.rs  run_cont.rs
ferrite-session/src/session/value/: mod.rs  receive.rs  send.rs
ferrite-session/src/shared/: fix.rs  linear_to_shared.rs  lock.rs  mod.rs  protocol.rs  public.rs  session.rs  shared_session.rs  shared_to_linear.rs
ferrite-session/src/test/: base.rs
(+283 files in other folders)
