[package]
name = "ferrite-demo"
version = "0.1.0"
edition = "2018"
description = "Session Types DSL for Rust (Demo)"
homepage = "https://github.com/maybevoid/ferrite"
repository = "https://github.com/maybevoid/ferrite"
authors = [ "Soares Chen <soares.chen@maybevoid.com>" ]
license = "MIT OR Apache-2.0"
keywords = [ "session-types" ]

[dependencies]
rand = "~0.7.3"
async-std = { version = "~1.8.0", features = ["unstable", "attributes"] }
ferrite-session = { path = "../ferrite-session" }
serde = { version = "~1.0.118", features = [ "derive" ] }
serde_json = "1.0.61"
