[package]
name = "ferrite-demo"
version = "0.1.0"
edition = "2018"
description = "Session Types DSL for Rust (Demo)"
homepage = "https://github.com/maybevoid/ferrite"
repository = "https://github.com/maybevoid/ferrite"
authors = [ "Soares Chen <soares.chen@maybevoid.com>" ]
license = "MIT OR Apache-2.0"
keywords = [ "session-types" ]

[dependencies]
log = "0.4.11"
rand = "0.7.3"
futures = "0.3.15"
env_logger = "0.8.3"
ipc-channel = "0.15.0"
ferrite-session = { path = "../ferrite-session" }
tokio = { version = "1.6.0", features = [ "full" ] }
