[package]
name = "ferrite-demo"
version = "0.1.0"
edition = "2021"
description = "Session Types DSL for Rust (Demo)"
license = "MIT OR Apache-2.0"
keywords = [ "session-types" ]

[dependencies]
log = "0.4.14"
rand = "0.7.3"
futures = "0.3.15"
env_logger = "0.8.3"
ipc-channel = "0.14.1"
ferrite-session = { path = "../ferrite-session" }
tokio = { version = "1.15.0", features = [ "full" ] }
