[package]
name = "ferrite-session"
version = "0.1.4"
edition = "2018"
description = "Session Types DSL for Rust"
homepage = "https://github.com/maybevoid/ferrite"
repository = "https://github.com/maybevoid/ferrite"
authors = [ "Soares Chen <soares.chen@maybevoid.com>" ]
license = "MIT OR Apache-2.0"
keywords = [ "session-types" ]
readme = "../README.md"

[dependencies]
log = "0.4.14"
paste = "1.0.5"
ipc-channel = "0.15.0"
tokio = { version = "1.7.0", features = [ "full" ] }
serde = { version = "1.0.126", features = [ "derive" ] }
