[package]
name = "ferrite-session"
version = "0.3.0"
edition = "2021"
description = "Session Types DSL for Rust"
license = "MIT OR Apache-2.0"
keywords = [ "session-types" ]
readme = "../README.md"

[dependencies]
log = "0.4.14"
paste = "1.0.6"
ipc-channel = "0.14.1"
tokio = { version = "1.15.0", features = [ "full" ] }
serde = { version = "1.0.133", features = [ "derive" ] }
