[package]
name = "ferrite-session"
version = "0.3.0"
edition = "2018"
description = "Session Types DSL for Rust"
homepage = "https://github.com/maybevoid/ferrite"
repository = "https://github.com/maybevoid/ferrite"
authors = [ "Soares Chen <soares.chen@maybevoid.com>" ]
license = "MIT OR Apache-2.0"
keywords = [ "session-types" ]
readme = "../README.md"

[dependencies]
log = "0.4.17"
paste = "1.0.7"
ipc-channel = "0.16.0"
tokio = { version = "1.19.1", features = [ "full" ] }
serde = { version = "1.0.137", features = [ "derive" ] }
